hphp/hack/test/typecheck/enum_4.php.exp
File "enum_4.php", line 8, characters 7-9:
Enums must be int or string or arraykey, not bool (Typing[4024])
